info: more about redux

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1 id="counter">0</h1>
+      <button id="dec" class="btn btn-primary">DEC</button>
+      <button id="inc" class="btn btn-dark">INC</button>
+      <button id="rnd" class="btn btn-danger">RND</button>
+    </div>
   </body>
 </html>
